<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ForgotPasswordActivity">

    <TextView
        android:id="@+id/titleFrogotPasswordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/lato_light"
        android:text="@string/resetPassword"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/textForgotPasswordTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textForgotPasswordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/lato"
        android:text="@string/guidTextForgotPassword"
        app:layout_constraintBottom_toTopOf="@+id/emailForgotPasswordET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleFrogotPasswordTV" />

    <EditText
        android:id="@+id/emailForgotPasswordET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/lato_light"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/submitResetPasswordBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textForgotPasswordTV" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitResetPasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_background"
        android:textAllCaps="false"
        android:fontFamily="@font/lato"
        android:text="@string/resetPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginForgotPasswordTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailForgotPasswordET" />

    <TextView
        android:id="@+id/loginForgotPasswordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:gravity="right"
        android:text="@string/underlineLogin"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitResetPasswordBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>