<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NoteUpsertActivity"
    android:background="@drawable/custom_background">


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backNoteUpsertBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/back_button_border"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        app:layout_constraintEnd_toStartOf="@+id/saveNoteBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/back_button_border"
        android:fontFamily="@font/lato_light"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/backNoteUpsertBtn"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/dateTitleNoteUpsertTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/lato_bold"
        android:text="DD.MM.YYYY."
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/datePickerNoteUpsertBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveNoteBtn" />

    <ImageButton
        android:id="@+id/datePickerNoteUpsertBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="25dp"
        android:background="?android:selectableItemBackground"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:scaleType="fitCenter"
        app:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/dateTitleNoteUpsertTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dateTitleNoteUpsertTV"
        app:layout_constraintTop_toTopOf="@+id/dateTitleNoteUpsertTV"
        app:srcCompat="@drawable/ic_calendar" />

    <EditText
        android:id="@+id/titleNoteUpsertET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:fontFamily="@font/lato"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTitleNoteUpsertTV" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/noteContentTIET"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="5dp"
        android:textSize="16sp"
        android:fontFamily="@font/lato"
        android:gravity="top|start"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/enter_your_thoughts"
        app:layout_constraintBottom_toTopOf="@+id/imagePickBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleNoteUpsertET"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/voiceMessageBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="25dp"
        android:tint="@color/white"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button"
        android:src="@drawable/ic_baseline_keyboard_voice_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></androidx.appcompat.widget.AppCompatImageButton>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imagePickBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:tint="@color/white"
        android:background="@drawable/rounded_button"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/voiceMessageBtn"></androidx.appcompat.widget.AppCompatImageButton>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSmallIV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"

        app:layout_goneMarginStart="15dp"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playBtn"></androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/playBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:tint="@color/white"
        app:layout_goneMarginStart="15dp"
        android:background="@drawable/rounded_button"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></androidx.appcompat.widget.AppCompatImageButton>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressNoteUpsertPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/Widget.AppCompat.ProgressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBigIV"
        android:visibility="gone"
        android:translationZ="@dimen/browser_actions_context_menu_max_width"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/mdtp_transparent_black"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>
